<resources>
    <string name="app_name">Doca Fit</string>
    <string name="welcome_mes">Welcome to Doca Fit!</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="toast_fill_all_fields">Please fill all areas</string>
    <string name="toast_logged_in">Logged in as: %1$s</string>
    <string name="toast_login_failed">Login failed: %1$s</string>
    <string name="toast_password_min">Password should be at least 6 characters</string>
    <string name="toast_signup_success">Signed up successfully!</string>
    <string name="toast_signup_failed">Signing up failed: %1$s</string>
    <string name="nav_home">Home</string>
    <string name="nav_suggestion">Exercise Suggestion</string>
    <string name="nav_tracking">Activity Tracking</string>
    <string name="nav_profile">Profile</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="user_label">User</string>
    <string name="theme_label">Theme</string>
    <string name="language_label">Language</string>
    <string name="change_button">Change</string>
    <string name="language_english">English</string>
    <string name="language_turkish">Türkçe</string>
    <string name="logout">Log Out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_email_sent">Password reset mail sent: %1$s</string>
    <string name="reset_email_failed">E-mail could not send: %1$s</string>
    <string name="suggestion_button_label">Suggest Exercise</string>
    <string name="select_image">Select Image</string>
    <string name="username">Name</string>
    <string name="save">Save</string>
    <string name="profile_edit_suc">Profile edited successfully</string>
    <string name="fail">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender_text">Gender</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="not_specified">Not Specified</string>
    <string name="error_user_not_logged_in">User could not log in</string>
    <string name="error_data_retrieval">Failed to retrieve data</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="error_gender_unselected">Please select a gender</string>
    <string name="log_gender_saved">Gender saved successfully</string>
    <string name="log_gender_failed">Gender could not be saved</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_deleted">Your account has been deleted.</string>
    <string name="account_delete_failed">Failed to delete account.</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="area_spinner_label">Select Area</string>
    <string name="suggested_exercise">Suggested Exercise</string>
    <string name="fat_ratio_calculation_title">Fat Ratio Calculation</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height_hint">Height (cm)</string>
    <string name="neck_hint">Neck (cm)</string>
    <string name="waist_hint">Waist (cm)</string>
    <string name="hip_hint">Hip (cm)</string>
    <string name="calculate_body_fat_button">Calculate Your Bodyfat</string>
    <string name="fat_rate_result">Fat Rate: --</string>
    <string name="lift_tracking_title">Lift Tracking</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="reps_hint">Reps</string>
    <string name="save_set_button">Save Set</string>
    <string name="error_gender">Please enter your gender!</string>
    <string name="error_hip_female">Please enter hip circumference for females</string>
    <string name="error_measurements">Please enter all measurements correctly!</string>
    <string name="body_fat_result">Body Fat: %.2f%%</string>
    <string name="error_select_exercise">Please select an exercise!</string>
    <string name="error_enter_weight_reps">Please enter weight and reps!</string>
    <string name="saving_workout">Saving workout set...</string>
    <string name="workout_saved">Workout set saved!</string>
    <string name="choose_exercise">Choose a fundamental exercise</string>
    <string name="workout_progress">Workout Progress</string>
    <string name="meal_suggestion">Meal Suggestion</string>
    <string name="suggest_meal">Suggest a Meal</string>
    <string name="meal_suggestion_placeholder">Your meal suggestion will appear here</string>
    <string name="suggested_meal_label">Suggested Meal</string>
    <string name="timer_text">Timer</string>
    <string name="start_text">Start</string>
    <string name="finish_text">Finish</string>
    <string name="remain_time_text">Remaining Time: %02d:%02d</string>
    <string name="time_up">Süre Doldu</string>

    <string-array name="meal_list">
        <item>Grilled chicken with quinoa, Steamed broccoli</item>
        <item>Oatmeal with whey protein, Banana, Peanut butter</item>
        <item>Salmon with sweet potato asparagus</item>
        <item>Whole wheat pasta with turkey meatballs, Tomato sauce</item>
        <item>Tuna salad with avocado mixed greens</item>
        <item>Egg white omelette with spinach whole grain toast</item>
        <item>Greek yogurt with berries granola</item>
        <item>Beef stir-fry with brown rice vegetables</item>
        <item>Cottage cheese with almonds sliced apple</item>
        <item>Protein smoothie with banana, Almond milk, Spinach</item>
    </string-array>
    <string-array name="gender_options">
        <item>Choose Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="area_list">
        <item>Chest</item>
        <item>Back</item>
        <item>Glutes</item>
        <item>Abs</item>
        <item>Biceps</item>
        <item>Shoulder</item>
        <item>Triceps</item>
        <item>Hamstrings</item>
        <item>Calves</item>
        <item>Forearms</item>
    </string-array>
    <string-array name="exercise_list">
        <item>Choose a fundamental exercise</item>
        <item>Bench Press</item>
        <item>Squat</item>
        <item>Deadlift</item>
    </string-array>
</resources>