<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="75dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:backgroundTint="@color/red"
        android:textColor="@color/button_text"
        android:layout_marginTop="20dp" />
</LinearLayout>
