<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="45dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_marginTop="70dp"
            android:id="@+id/profileImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_default_profile"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:textColor="@color/button_text"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/button_text"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="24dp"
            android:textColor="@color/button_text"/>
    </LinearLayout>
</ScrollView>
