<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="75dp"
    android:paddingBottom="75dp">

    <LinearLayout
        android:id="@+id/timerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/countdown_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_text"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:layout_marginBottom="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="32dp">

                <Button
                    android:id="@+id/plus_minutes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_text"
                    android:textSize="22sp"
                    android:text="+" />

                <TextView
                    android:id="@+id/show_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="05"
                    android:textSize="50sp"
                    android:layout_marginVertical="8dp"/>

                <Button
                    android:id="@+id/minus_minutes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_text"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="32dp">

                <Button
                    android:id="@+id/plus_seconds_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_text"
                    android:text="+" />

                <TextView
                    android:id="@+id/show_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textSize="50sp"
                    android:layout_marginVertical="8dp"/>

                <Button
                    android:id="@+id/minus_seconds_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_text"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_text"
            android:backgroundTint="@color/red"
            android:layout_marginTop="18dp"
            android:textColor="@color/button_text"/>

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_text"
            android:backgroundTint="@color/red"
            android:layout_marginTop="18dp"
            android:textColor="@color/button_text"/>
    </LinearLayout>

</ScrollView>
